--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
 	 "node": true,
 	 "jquery": true,
 	},
-	"extends": "eslint:recommended",
+	"extends": "airbnb",
 	"rules": {
 		 "no-console": "off",
 	}
